--- a/account-dev.properties
+++ b/account-dev.properties
@@ -1,4 +1,4 @@
-account.msg =Welcome to the account Production application
+account.msg =Welcome to the account Production application Git Configserver
 account.build-version=2
 
 account.mailDetails.hostName=dev-account@navin.com
